crates/ruff_linter/src/rules/torch/snapshots/ruff_linter__rules__torch__tests__TORCH002_noqa_code_per_line.py.snap
---
source: crates/ruff_linter/src/rules/torch/mod.rs
---
TORCH002 Avoid accessing `tensor.data`; use `tensor.detach()` instead
 --> TORCH002_noqa_code_per_line.py:5:5
  |
3 | x = torch.tensor([1.0])
4 | y = x.data  # noqa: TORCH002
5 | y = x.data
  |     ^^^^^^
  |
