crates/ruff_linter/src/rules/torch/snapshots/ruff_linter__rules__torch__tests__TORCH006_noqa_code_per_line.py.snap
---
source: crates/ruff_linter/src/rules/torch/mod.rs
---
TORCH006 [*] Use `torch.inference_mode()` instead of `torch.no_grad()`
 --> TORCH006_noqa_code_per_line.py:6:6
  |
4 |     pass
5 |
6 | with torch.no_grad():
  |      ^^^^^^^^^^^^^
7 |     pass
  |
help: Replace `torch.no_grad` with `torch.inference_mode`
3 | with torch.no_grad():  # noqa: TORCH006
4 |     pass
5 |
  - with torch.no_grad():
6 + with torch.inference_mode():
7 |     pass
note: This is an unsafe fix and may change runtime behavior
